# vncmanager-controller

./: CMakeLists.txt  ConfigWindow.cpp  ConfigWindow.h  ConfigWindow.ui  ManagerConnection.cpp  ManagerConnection.h  README.md  StdinConnection.cpp  StdinConnection.h  VncConfiguration.cpp  VncConfiguration.h  main.cpp  vncmanager-controller.desktop
gnome-shell-extension/: extension.js  metadata.json
